New entries should be added at the top

2004-08-18 Added base and subs properties for logscale plots, 
           user modifiable using set_[x,y]scale('log',base=b,subs=[mt1,mt2,...]) - GL 

2004-08-18 fixed a bug exposed by trying to find the HOME dir on win32
           thanks to Alan Issac for pointing to the light - JDH

2004-08-18 fixed errorbar bug in setting ecolor - JDH

2004-08-12 Added Darren Dale's exponential ticking patch

2004-08-11 Added Gregory's fltkagg backend

==========================================================================
2004-08-09 matplotlib-0.61.0 released

2004-08-08 backend_gtk.py: get rid of the final PyGTK deprecation warning by 
           replacing gtkOptionMenu with gtkMenu in the 2.4 version of the 
           classic toolbar.

2004-08-06 Added Tk zoom to rect rectangle, proper idle drawing, and
           keybinding - JDH

2004-08-05 Updated installing.html and INSTALL - JDH

2004-08-01 backend_gtk.py: move all drawing code into the expose_event()

2004-07-28 Added Greg's toolbar2 and backend_*agg patches - JDH

2004-07-28 Added image.imread with support for loading png into
           numerix arrays

2004-07-28 Added key modifiers to events - implemented dynamic updates
           and rubber banding for interactive pan/zoom - JDH

2004-07-27 did a readthrough of SVG, replacing all the string
           additions with string interps for efficiency, fixed some
           layout problems, added font and image support (through
           external pngs) - JDH

2004-07-25 backend_gtk.py: modify toolbar2 to make it easier to support GTK+ 
           2.4. Add GTK+ 2.4 toolbar support. - SC

2004-07-24 backend_gtk.py: Simplified classic toolbar creation - SC

2004-07-24 Added images/matplotlib.svg to be used when GTK+ windows are 
           minimised - SC

2004-07-22 Added right mouse click zoom for NavigationToolbar2 panning
	   mode. - JTM
		
2004-07-22 Added NavigationToolbar2 support to backend_tkagg.