@@ -31,7 +31,7 @@ hold(True)
 Z2 = func3(X, Y)
 im2 = imshow(Z2, cmap=cm.jet, alpha=.9, interpolation='bilinear',
              extent=extent)
-axis([xmin, xmax, ymin, ymax])
+#axis([xmin, xmax, ymin, ymax])
 
 
 #savefig('layer_images')
