@@ -6,17 +6,19 @@ t = arange(dt, 20.0, dt)
 
 subplot(311)
 semilogy(t, exp(-t/5.0))
-title('semilogy')
+ylabel('semilogy')
 
 subplot(312)
 semilogx(t, sin(2*pi*t))
-title('semilogx')
+ylabel('semilogx')
 
 subplot(313)
 loglog(t, 20*exp(-t/10.0))
 gca().set_xscale('log',base=4)
 gca().set_yscale('log',base=8,subs=[2,4,6])
+#gca().set_yscale('log',base=8,subs=None)
 grid(True)
-title('loglog with custom base and subs logscaling')
+ylabel('loglog')
+text(1, 15, 'custom base and scale')
 #savefig('log_demo')
 show()
